--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "layarsantai",
   "version": "1.0.0",
   "description": "Submission Dicocing ",
-  "main": "main.js",
+  "main": "src/script/view/main.js",
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "start-dev": "webpack serve --config webpack.dev.js",
